Fix plenty of issues, refactor INaksha, improve tasks.